--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -8,18 +8,12 @@
     <Filter Include="c++ header\GL部">
       <UniqueIdentifier>{f8951aba-1404-482d-8908-0d6e278fe4d7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="c++ header\OS依存部%28Windows%29">
-      <UniqueIdentifier>{99f3ddce-7745-4081-aca5-60d09562a2f1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="c++ source">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="c++ source\GL部">
       <UniqueIdentifier>{361fa09f-0f34-4bf5-99f2-122377e16975}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="c++ source\OS依存%28Windows%29">
-      <UniqueIdentifier>{d04323b2-d4f1-40c2-901c-a5d9aadd8181}</UniqueIdentifier>
     </Filter>
     <Filter Include="resource files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
@@ -55,9 +49,6 @@
     <Filter Include="c++ source\core演算部">
       <UniqueIdentifier>{1b9fabec-2501-4487-a358-3dd357866c4c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="c++ header\OS依存部%28Windows%29\UI系">
-      <UniqueIdentifier>{1d777d3a-076e-4f26-bb8c-ddf3724e49f1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="c++ source\UI系">
       <UniqueIdentifier>{0986643d-8083-4b2f-8525-7e3d2d3c9fd6}</UniqueIdentifier>
     </Filter>
@@ -66,6 +57,15 @@
     </Filter>
     <Filter Include="c++ header\OVR">
       <UniqueIdentifier>{1bb33876-0ac0-45f1-bb9e-80a8963380a2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ source\OS/Hard依存%28Windows%29">
+      <UniqueIdentifier>{d04323b2-d4f1-40c2-901c-a5d9aadd8181}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ header\OS/Hard依存部%28Windows%29">
+      <UniqueIdentifier>{99f3ddce-7745-4081-aca5-60d09562a2f1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="c++ header\OS/Hard依存部%28Windows%29\UI系">
+      <UniqueIdentifier>{1d777d3a-076e-4f26-bb8c-ddf3724e49f1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -157,13 +157,10 @@
       <Filter>c++ source\GL部</Filter>
     </ClCompile>
     <ClCompile Include="core.cpp">
-      <Filter>c++ source\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS/Hard依存%28Windows%29</Filter>
     </ClCompile>
     <ClCompile Include="engine3dWin.cpp">
-      <Filter>c++ source\OS依存%28Windows%29</Filter>
-    </ClCompile>
-    <ClCompile Include="to3d.cpp">
-      <Filter>c++ source\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS/Hard依存%28Windows%29</Filter>
     </ClCompile>
     <ClCompile Include="operation.cpp">
       <Filter>c++ source\core演算部</Filter>
@@ -186,16 +183,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="modlgRc.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="rcFunc.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="rcFunc2.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="resource1.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="constants.h">
       <Filter>c++ header\core演算部</Filter>
@@ -219,7 +216,7 @@
       <Filter>c++ header\GL部</Filter>
     </ClInclude>
     <ClInclude Include="engine3dWin.h">
-      <Filter>c++ header\OS依存部%28Windows%29</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
       <Filter>c++ header\GL部</Filter>
@@ -249,13 +246,13 @@
       <Filter>c++ header\core演算部</Filter>
     </ClInclude>
     <ClInclude Include="editor.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="randomUI.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
     <ClInclude Include="VR_Manager.h">
-      <Filter>c++ source\OS依存%28Windows%29</Filter>
+      <Filter>c++ source\OS/Hard依存%28Windows%29</Filter>
     </ClInclude>
     <ClInclude Include="..\OVR\LibOVRKernel\Src\GL\CAPI_GLE.h">
       <Filter>c++ header\OVR</Filter>
@@ -312,7 +309,7 @@
       <Filter>resource files</Filter>
     </Text>
     <Text Include="objSetting.h">
-      <Filter>c++ header\OS依存部%28Windows%29\UI系</Filter>
+      <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </Text>
     <Text Include="pyUpd.py">
       <Filter>resource files</Filter>
