--- a/on4d_GLr2/on4d_GLr2.vcxproj
+++ b/on4d_GLr2/on4d_GLr2.vcxproj
@@ -93,6 +93,7 @@
     <ClInclude Include="editor.h" />
     <ClInclude Include="engine3d.h" />
     <ClInclude Include="engine3dGL.h" />
+    <ClInclude Include="engine3dOS.h" />
     <ClInclude Include="engine3dWin.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="geometry.h" />
