--- a/on4d_GLr2/on4d_GLr2.vcxproj.filters
+++ b/on4d_GLr2/on4d_GLr2.vcxproj.filters
@@ -251,9 +251,6 @@
     <ClInclude Include="randomUI.h">
       <Filter>c++ header\OS/Hard依存部%28Windows%29\UI系</Filter>
     </ClInclude>
-    <ClInclude Include="VR_Manager.h">
-      <Filter>c++ source\OS/Hard依存%28Windows%29</Filter>
-    </ClInclude>
     <ClInclude Include="..\OVR\LibOVRKernel\Src\GL\CAPI_GLE.h">
       <Filter>c++ header\OVR</Filter>
     </ClInclude>
@@ -262,6 +259,12 @@
     </ClInclude>
     <ClInclude Include="PyInteract.h">
       <Filter>c++ header\core演算部</Filter>
+    </ClInclude>
+    <ClInclude Include="VR_Manager.h">
+      <Filter>c++ header\OS/Hard依存部%28Windows%29</Filter>
+    </ClInclude>
+    <ClInclude Include="engine3dOS.h">
+      <Filter>c++ header\OS/Hard依存部%28Windows%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
